--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ asgiref==3.8.1
     # via django
 django==5.2
     # via -r requirements.in
+gunicorn==23.0.0
+    # via -r requirements.in
+packaging==25.0
+    # via gunicorn
 psycopg[binary]==3.2.7
     # via -r requirements.in
 psycopg-binary==3.2.7
