--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -19,4 +19,5 @@ USER appuser
 
 EXPOSE 8000
 
-CMD ["python", "manage.py", "runserver", "--nostatic", "0.0.0.0:8000"]
+CMD sh -c "python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver --nostatic 0.0.0.0:8000"
+
